Fixes after first review
+ adds scrollview to detail activity
+ adds endless scrolling to the main activity

--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -4,5 +4,5 @@
     <item
         android:id="@+id/order"
         android:title="@string/order_popularity"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
