--- a/app/src/main/res/layout/activity_film_detail.xml
+++ b/app/src/main/res/layout/activity_film_detail.xml
@@ -1,60 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_film_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.didier.stage1.FilmDetailActivity">
-
-    <TextView
-        android:id="@+id/originalTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="ORIGINAL TITLE"
-        android:textSize="20sp"
-        android:textStyle="normal|bold" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/originalTitle"
-        android:id="@+id/thumbnailLayout">
-
-        <ImageView
-            android:id="@+id/thumbnailPoster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:adjustViewBounds="false"
-            android:contentDescription="Thumbnail poster"
-            android:cropToPadding="false" />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
-            android:id="@+id/releaseDate"
-            android:layout_width="wrap_content"
+            android:id="@+id/originalTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="22/01/2017" />
+            android:layout_alignParentTop="true"
+            android:text="ORIGINAL TITLE"
+            android:textSize="20sp"
+            android:textStyle="normal|bold" />
+
+        <RelativeLayout
+            android:id="@+id/thumbnailLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/originalTitle">
+
+            <ImageView
+                android:id="@+id/thumbnailPoster"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:adjustViewBounds="false"
+                android:contentDescription="Thumbnail poster"
+                android:cropToPadding="false" />
+
+            <TextView
+                android:id="@+id/releaseDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="22/01/2017" />
+
+            <TextView
+                android:id="@+id/userRating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/releaseDate"
+                android:layout_toRightOf="@+id/thumbnailPoster"
+                android:text="4.5 / 5" />
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/userRating"
-            android:layout_width="wrap_content"
+            android:id="@+id/synopsis"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/releaseDate"
-            android:layout_toRightOf="@+id/thumbnailPoster"
-            android:text="4.5 / 5" />
+            android:layout_below="@+id/thumbnailLayout"
+            android:text="@string/synopsis_text_so_long" />
+
     </RelativeLayout>
-
-    <TextView
-        android:id="@+id/synopsis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/thumbnailLayout"
-        android:text="Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks." />
-</RelativeLayout>
+</ScrollView>
