--- a/app/src/main/res/layout/activity_film_detail.xml
+++ b/app/src/main/res/layout/activity_film_detail.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_film_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.didier.stage1.FilmDetailActivity">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,51 +17,86 @@
 
         <TextView
             android:id="@+id/originalTitle"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:text="ORIGINAL TITLE"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             android:textSize="20sp"
-            android:textStyle="normal|bold" />
+            android:textStyle="normal|bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/checkBox"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="LONG LONG LONG LONG ORIGINAL TITLE" />
 
-        <RelativeLayout
-            android:id="@+id/thumbnailLayout"
-            android:layout_width="match_parent"
+        <CheckBox
+            android:id="@+id/favorite"
+            style="?android:attr/starStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/originalTitle">
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintLeft_toRightOf="@+id/originalTitle"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
+        <ImageView
                 android:id="@+id/thumbnailPoster"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:adjustViewBounds="false"
-                android:contentDescription="Thumbnail poster"
-                android:cropToPadding="false" />
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="8dp"
+            android:adjustViewBounds="false"
+            android:contentDescription="Thumbnail poster"
+            android:cropToPadding="false"
+            app:layout_constraintLeft_toLeftOf="@+id/originalTitle"
+            app:layout_constraintTop_toBottomOf="@+id/originalTitle"
+            tools:src="@android:drawable/ic_menu_gallery" />
 
-            <TextView
-                android:id="@+id/releaseDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:text="22/01/2017" />
 
-            <TextView
+        <TextView
                 android:id="@+id/userRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/releaseDate"
-                android:layout_toRightOf="@+id/thumbnailPoster"
-                android:text="4.5 / 5" />
-        </RelativeLayout>
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@+id/thumbnailPoster"
+            app:layout_constraintRight_toRightOf="@+id/checkBox"
+            app:layout_constraintTop_toBottomOf="@+id/originalTitle"
+            tools:text="4.5 / 5" />
+
+        <TextView
+            android:id="@+id/releaseDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/synopsis"
+            app:layout_constraintRight_toRightOf="@+id/userRating"
+            app:layout_constraintTop_toBottomOf="@+id/userRating"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="22/01/2017" />
 
         <TextView
             android:id="@+id/synopsis"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/thumbnailLayout"
-            android:text="@string/synopsis_text_so_long" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="26dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/thumbnailPoster"
+            app:layout_constraintVertical_bias="1.0"
+            tools:text="@string/synopsis_text_so_long" />
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 </ScrollView>
