--- a/app/src/main/res/layout/movie_list_item_layout.xml
+++ b/app/src/main/res/layout/movie_list_item_layout.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/movie_poster"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:contentDescription="MOVIE POSTER"
